--- a/f_src/HTML/sign_In.html
+++ b/f_src/HTML/sign_In.html
@@ -9,8 +9,7 @@
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Poppins&display=swap" rel="stylesheet">
 	</head>
-	<body style="background-color:#9ED5C5"> 
-
+	<body > 
 		<div class="container">
 			<form>
 				<h1 id="header">Sign In With</h1>
