--- a/f_src/HTML/sign_In.html
+++ b/f_src/HTML/sign_In.html
@@ -18,6 +18,11 @@
 				<input class="input" id="password" type="text" name="password" placeholder="Your Password">
 				<br>
 					<button class="submit"type="submit">Sign in</button>
+				<br>
+				<div class="remember">
+					<span class="signUp" id="para">Not a member?</span>
+					<a class="signUp" id="sign" href="./sign_Up.html">Sign Up Now</a>
+				</div>				
 			</form>
 		</div>
 	</body>
