--- a/f_src/HTML/sign_Up.html
+++ b/f_src/HTML/sign_Up.html
@@ -4,8 +4,27 @@
 		<title>Sign Up</title>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link href="../Css/sign_up.css" rel="stylesheet">
+		<!-- <link href="../Css/sign_in.css" rel="stylesheet"> -->
 	</head>
-	<body style="background-color:#9ED5C5"> 
-		<h1>you want to Sign up</h1>	
+	<body> 
+		<div class="container">
+			<p>you want to Sign up</p>
+			<input class="input" id="f_name" type="text" name="f_name" placeholder="First name">	
+			<br>
+			<input class="input" id="l_name" type="text" name="l_name" placeholder="Last name">	
+			<br>
+			<input class="input" id="email" type="email" name="email" placeholder="Email">	
+			<br>
+			<input class="input" id="password" type="password" name="pasword" placeholder="Password">	
+			<br>
+			<input class="input" id="password" type="password" name="r_password" placeholder="Retype Password">	
+			<br>
+			<span id="link" href="./sign_In.html">← Sign in</span>
+			
+			<input type="submit" id="creat"value="Create Account">
+		</div>
 	</body>
 </html>
+
+
