--- a/f_src/HTML/sign_Up.html
+++ b/f_src/HTML/sign_Up.html
@@ -20,8 +20,8 @@
 			<br>
 			<input class="input" id="password" type="password" name="r_password" placeholder="Retype Password">	
 			<br>
-			<span id="link" href="./sign_In.html">← Sign in</span>
-			
+			<!-- <a id="link" href="./sign_In.html">← Sign in</a> -->
+			<button id ="link" onclick="window.location.href='./sign_In.html'">← Sign in</button>
 			<input type="submit" id="creat"value="Create Account">
 		</div>
 	</body>
