--- a/f_src/HTML/sign_In.html
+++ b/f_src/HTML/sign_In.html
@@ -22,7 +22,15 @@
 				<div class="remember">
 					<span class="signUp" id="para">Not a member?</span>
 					<a class="signUp" id="sign" href="./sign_Up.html">Sign Up Now</a>
-				</div>				
+				</div>
+				<hr>
+				<div class="google-container">
+					<a href="#" class="google-signin-button">
+					  <img src="https://upload.wikimedia.org/wikipedia/commons/5/53/Google_%22G%22_Logo.svg"
+					  	 alt="Google Logo" class="google-logo">
+					  <span class="google-text">Sign in with Google</span>
+					</a>
+				</div>				  
 			</form>
 		</div>
 	</body>
